--- a/nexus/Dockerfile
+++ b/nexus/Dockerfile
@@ -2,49 +2,56 @@
 # Creates a docker container with Nexus Artifact Repository
 #
 
-FROM centos:6
+FROM       centos:centos7
+MAINTAINER Sonatype <cloud-ops@sonatype.com>
 
-MAINTAINER Marcel Birkner <marcel.birkner@codecentric.de>
+ENV SONATYPE_WORK /sonatype-work
+ENV NEXUS_VERSION 2.12.1-01
 
-USER root
-# Update the system
-RUN yum -y update; \
-    yum clean all
+ENV JAVA_HOME /opt/java
+ENV JAVA_VERSION_MAJOR 8
+ENV JAVA_VERSION_MINOR 74
+ENV JAVA_VERSION_BUILD 02
 
-##########################################################
-# Install Java JDK, SSH and other useful cmdline utilities
-##########################################################
-RUN yum -y install java-1.7.0-openjdk-devel \
-    which \
-    telnet \
-    unzip \
-    openssh-server \
-    sudo \
-    openssh-clients \
-    iputils \
-    iproute \
-    httpd-tools \
-    wget \
-    tar; \
-    yum clean all
-ENV JAVA_HOME /usr/lib/jvm/jre
+RUN yum install -y \
+  curl tar createrepo \
+  && yum clean all
 
-##########################################################
-# Install Nexus
-##########################################################
-RUN mkdir -p /opt/sonatype-nexus /opt/sonatype-work
-RUN wget -O /tmp/nexus-latest-bundle.tar.gz http://www.sonatype.org/downloads/nexus-latest-bundle.tar.gz
-RUN tar xzvf /tmp/nexus-latest-bundle.tar.gz -C /opt/sonatype-nexus --strip-components=1
-RUN useradd --user-group --system --home-dir /opt/sonatype-nexus nexus
+# install Oracle JRE
+RUN mkdir -p /opt \
+  && curl --fail --silent --location --retry 3 \
+  --header "Cookie: oraclelicense=accept-securebackup-cookie; " \
+  http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/server-jre-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz \
+  | gunzip \
+  | tar -x -C /opt \
+  && ln -s /opt/jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR} ${JAVA_HOME}
 
+RUN mkdir -p /opt/sonatype/nexus \
+  && curl --fail --silent --location --retry 3 \
+    https://download.sonatype.com/nexus/oss/nexus-${NEXUS_VERSION}-bundle.tar.gz \
+  | gunzip \
+  | tar x -C /tmp nexus-${NEXUS_VERSION} \
+  && mv /tmp/nexus-${NEXUS_VERSION}/* /opt/sonatype/nexus/ \
+  && rm -rf /tmp/nexus-${NEXUS_VERSION}
+
+RUN useradd -r -u 200 -m -c "nexus role account" -d ${SONATYPE_WORK} -s /bin/false nexus
+
+VOLUME ${SONATYPE_WORK}
+
+EXPOSE 8081
+WORKDIR /opt/sonatype/nexus
+USER nexus
+ENV CONTEXT_PATH /
+ENV MAX_HEAP 768m
+ENV MIN_HEAP 256m
+ENV JAVA_OPTS -server -Djava.net.preferIPv4Stack=true
+ENV LAUNCHER_CONF ./conf/jetty.xml ./conf/jetty-requestlog.xml
 ADD nexus.xml /opt/sonatype-work/nexus/conf/nexus.xml
 
-RUN chown -R nexus:nexus /opt/sonatype-work /opt/sonatype-nexus
+CMD ${JAVA_HOME}/bin/java \
+  -Dnexus-work=${SONATYPE_WORK} -Dnexus-webapp-context-path=${CONTEXT_PATH} \
+  -Xms${MIN_HEAP} -Xmx${MAX_HEAP} \
+  -cp 'conf/:lib/*' \
+  ${JAVA_OPTS} \
+  org.sonatype.nexus.bootstrap.Launcher ${LAUNCHER_CONF}
 
-ENV NEXUS_WEBAPP_CONTEXT_PATH /nexus
-RUN echo "#!/bin/bash" > /opt/start-nexus.sh
-RUN echo "su -c \"/opt/sonatype-nexus/bin/nexus console\" - nexus" >> /opt/start-nexus.sh
-RUN chmod +x /opt/start-nexus.sh
-
-CMD ["/opt/start-nexus.sh"]
-EXPOSE 8081
