--- a/sonar/Dockerfile
+++ b/sonar/Dockerfile
@@ -8,14 +8,12 @@
 
 FROM java:openjdk-8u45-jdk
 
-MAINTAINER Marcel Birkner <marcel.birkner@codecentric.de>
+MAINTAINER David Gageot <david.gageot@sonarsource.com>
 
 ENV SONARQUBE_HOME /opt/sonarqube
 
 # Http port
 EXPOSE 9000
-
-# H2 Database port
 EXPOSE 9092
 
 # Database configuration
@@ -24,31 +22,23 @@ ENV SONARQUBE_JDBC_USERNAME sonar
 ENV SONARQUBE_JDBC_PASSWORD sonar
 ENV SONARQUBE_JDBC_URL jdbc:h2:tcp://localhost:9092/sonar
 
-ENV SONAR_VERSION 5.1.2
-
-ENV SONAR_DOWNLOAD_URL https://sonarsource.bintray.com/Distribution
+ENV SONAR_VERSION 5.4
 
 # pub   2048R/D26468DE 2015-05-25
-#      Key fingerprint = F118 2E81 C792 9289 21DB  CAB4 CFCA 4A29 D264 68DE
-# uid       [ unknown] sonarsource_deployer (Sonarsource Deployer) <infra@sonarsource.com>
+#       Key fingerprint = F118 2E81 C792 9289 21DB  CAB4 CFCA 4A29 D264 68DE
+# uid                  sonarsource_deployer (Sonarsource Deployer) <infra@sonarsource.com>
 # sub   2048R/06855C1D 2015-05-25
 RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys F1182E81C792928921DBCAB4CFCA4A29D26468DE
 
 RUN set -x \
 	&& cd /opt \
-	&& curl -o sonarqube.zip -fSL http://downloads.sonarsource.com/sonarqube/sonarqube-$SONAR_VERSION.zip \
-	&& curl -o sonarqube.zip.asc -fSL http://downloads.sonarsource.com/sonarqube/sonarqube-$SONAR_VERSION.zip.asc \
-	&& gpg --verify sonarqube.zip.asc \
+	&& curl -o sonarqube.zip -fSL https://sonarsource.bintray.com/Distribution/sonarqube/sonarqube-$SONAR_VERSION.zip \
+	&& curl -o sonarqube.zip.asc -fSL https://sonarsource.bintray.com/Distribution/sonarqube/sonarqube-$SONAR_VERSION.zip.asc \
+	&& gpg --batch --verify sonarqube.zip.asc sonarqube.zip \
 	&& unzip sonarqube.zip \
 	&& mv sonarqube-$SONAR_VERSION sonarqube \
-  && rm sonarqube.zip* \
+	&& rm sonarqube.zip* \
 	&& rm -rf $SONARQUBE_HOME/bin/*
-
-# Installing Plugins
-RUN cd /opt/sonarqube/extensions/plugins/ \
-  && curl -o sonar-java-plugin-3.5.jar -fSL $SONAR_DOWNLOAD_URL/sonar-java-plugin/sonar-java-plugin-3.5.jar \
-  && curl -o sonar-web-plugin-2.4.jar -fSL $SONAR_DOWNLOAD_URL/sonar-web-plugin/sonar-web-plugin-2.4.jar \
-  && curl -o sonar-scm-git-plugin-1.1.jar -fSL http://downloads.sonarsource.com/plugins/org/codehaus/sonar-plugins/sonar-scm-git-plugin/1.1/sonar-scm-git-plugin-1.1.jar
 
 VOLUME ["$SONARQUBE_HOME/data", "$SONARQUBE_HOME/extensions"]
 
